k8s/base/matchmaker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matchmaker
spec:
  selector:
    app: matchmaker
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
