k8s/base/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector:
    app: orchestrator
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
