k8s/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  selector:
    app: worker
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
